--- a/index5.html
+++ b/index5.html
@@ -6,34 +6,79 @@
 <div class="card text-center">
   <div class="card-header">
     <ul class="nav nav-tabs card-header-tabs">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="true" href="#">Active</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-      </li>
+      <li class="nav-item"><a class="nav-link active" aria-current="true" href="#" id="Main">Main</a></li>
+      <li class="nav-item"><a class="nav-link" href="#" id="About">About</a></li>
     </ul>
   </div>
-  <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+  
+  <div class="card-body" id="Main_card_body">
+    <h1 class="card-title" id="Main_card_title">Automatic Memetics Motivational Image Generation</h1>
+    <h3 class="card-title" id="Main_card_subtitle">The inspriation of this webapp is to encourage mimicking of motivation and leading a happy-productive life, by generating motivational images using AI models.</h3>
+    <ol type="A" class="card-text" id="Main_card_text">
+	<li>Select the prompts to receive a motivational AI generated image on important topics including: health, education, life-balance, happiness, success, effective communication.</li>
+	<li>Save a screenshot of your motivational image!</li>
+</ol>
   </div>
+
+  <div class="card-body" id="About_card_body">
+    <h1 class="card-title" id="About_card_title">Automatic Memetics Motivational Image Generation</h1>
+    <p class="card-text" id="About_card_text">A field of study called memetics arose in the 1990s to explore the concepts and transmission of memes in terms of an evolutionary model. An Internet meme, or meme is a cultural item (such as an idea, behavior, or style) that spreads across the Internet, primarily through social media platforms. Typically, images, videos, GIFs, and other "viral media" content are used to encourage mimicking/miming of a concept [<a href="https://en.wikipedia.org/wiki/Memetics">Wikipedia: Memetics</a>, <a href="https://en.wikipedia.org/wiki/Internet_meme">Wikipedia: Internet meme</a>].</p>
+  </div>
+  
 </div>
 
+
+<style>
+div#Main_card_body{ display:block; }
+div#About_card_body{ display:none; }
+</style>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
       
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 
-  
 
 <script>
 
+// -----------------------------------------
+  
+document.getElementById("Main").addEventListener("click", async () => {
+
+  document.getElementById("Main_card_body").style.display = "block";
+  document.getElementById("Main_card_title").style.display = "block";
+  document.getElementById("Main_card_subtitle").style.display = "block";
+  document.getElementById("Main_card_text").style.display = "block";
+  
+  document.getElementById("About_card_body").style.display = "none";
+  document.getElementById("About_card_title").style.display = "none";
+  document.getElementById("About_card_text").style.display = "none";
+  
+});
+
+// -----------------------------------------
+  
+document.getElementById("About").addEventListener("click", async () => {
+
+  document.getElementById("Main_card_body").style.display = "none";
+  document.getElementById("Main_card_title").style.display = "none";
+  document.getElementById("Main_card_subtitle").style.display = "none";
+  document.getElementById("Main_card_text").style.display = "none";
+  
+  document.getElementById("About_card_body").style.display = "block";
+  document.getElementById("About_card_title").style.display = "block";
+  document.getElementById("About_card_text").style.display = "block";
+  
+});
+
+
+// -----------------------------------------
+
+
+// -----------------------------------------
+
+
+// -----------------------------------------
 
 </script>
 </body>
