--- a/index5.html
+++ b/index5.html
@@ -31,6 +31,8 @@
 <style>
 div#Main_card_body{ display:block; }
 div#About_card_body{ display:none; }
+h3#Main_card_subtitle{ text-align: left; }
+ol#Main_card_text{ text-align: left; }
 </style>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -45,14 +47,16 @@ div#About_card_body{ display:none; }
   
 document.getElementById("Main").addEventListener("click", async () => {
 
-  document.getElementById("Main_card_body").style.display = "block";
-  document.getElementById("Main_card_title").style.display = "block";
-  document.getElementById("Main_card_subtitle").style.display = "block";
-  document.getElementById("Main_card_text").style.display = "block";
-  
-  document.getElementById("About_card_body").style.display = "none";
-  document.getElementById("About_card_title").style.display = "none";
-  document.getElementById("About_card_text").style.display = "none";
+	document.getElementById("Main").class = "nav-link active";
+	document.getElementById("Main_card_body").style.display = "block";
+	document.getElementById("Main_card_title").style.display = "block";
+	document.getElementById("Main_card_subtitle").style.display = "block";
+	document.getElementById("Main_card_text").style.display = "block";
+
+	document.getElementById("About").class = "nav-link";
+	document.getElementById("About_card_body").style.display = "none";
+	document.getElementById("About_card_title").style.display = "none";
+	document.getElementById("About_card_text").style.display = "none";
   
 });
 
@@ -60,14 +64,16 @@ document.getElementById("Main").addEventListener("click", async () => {
   
 document.getElementById("About").addEventListener("click", async () => {
 
-  document.getElementById("Main_card_body").style.display = "none";
-  document.getElementById("Main_card_title").style.display = "none";
-  document.getElementById("Main_card_subtitle").style.display = "none";
-  document.getElementById("Main_card_text").style.display = "none";
-  
-  document.getElementById("About_card_body").style.display = "block";
-  document.getElementById("About_card_title").style.display = "block";
-  document.getElementById("About_card_text").style.display = "block";
+	document.getElementById("Main").class = "nav-link";
+	document.getElementById("Main_card_body").style.display = "none";
+	document.getElementById("Main_card_title").style.display = "none";
+	document.getElementById("Main_card_subtitle").style.display = "none";
+	document.getElementById("Main_card_text").style.display = "none";
+
+	document.getElementById("About").class = "nav-link active";
+	document.getElementById("About_card_body").style.display = "block";
+	document.getElementById("About_card_title").style.display = "block";
+	document.getElementById("About_card_text").style.display = "block";
   
 });
 
