--- a/index3.html
+++ b/index3.html
@@ -132,7 +132,7 @@ window.addEventListener('beforeunload', function() {
 
 const neutralORnot = ["neutral", "not_neutral"];
 
-const motivation_topics = ["health", "education", "life-balance", "happiness", "success", "effective communication"];
+const motivation_topics = ["health", "education", "lifebalance", "happiness", "success", "effectiveCommunication"];
 
 var ctx = document.getElementById("canvas_img").getContext("2d");
 	
