--- a/index3.html
+++ b/index3.html
@@ -413,8 +413,11 @@ async function run_selection() {
 				return neutral_selection_index.at(i) == val ? val : '';
 			}
 		});
+		console.log("result: ", result);
+		
 		result = result.filter((x) => x.length != 0);
-
+		console.log("result: ", result);
+		
 		// Select a valid index value
 		var file_selection = result.at(Math.floor(Math.random()*result.length));
 		console.log("file_selection: ", file_selection);
