--- a/index5.html
+++ b/index5.html
@@ -47,7 +47,13 @@ ol#Main_card_text{ text-align: left; }
   
 document.getElementById("Main").addEventListener("click", async () => {
 
-	document.getElementById("Main").class = "nav-link active";
+	// document.getElementById("Main").class = "nav-link active";
+	// OR
+	console.log("document.querySelectorAll('.nav.nav-tabs.card-header-tabs'): ", document.querySelectorAll('.nav.nav-tabs.card-header-tabs'));
+	
+	// document.querySelectorAll('.nav.nav-tabs.card-header-tabs')[0].querySelector('.nav-link.active').classList.remove('active');
+	// document.querySelectorAll('.nav.nav-tabs.card-header-tabs')[0].querySelectorAll('.nav-link')[1].classList.add('active');
+	
 	document.getElementById("Main_card_body").style.display = "block";
 	document.getElementById("Main_card_title").style.display = "block";
 	document.getElementById("Main_card_subtitle").style.display = "block";
