--- a/index5.html
+++ b/index5.html
@@ -50,9 +50,13 @@ document.getElementById("Main").addEventListener("click", async () => {
 	// document.getElementById("Main").class = "nav-link active";
 	// OR
 	console.log("document.querySelectorAll('.nav.nav-tabs.card-header-tabs'): ", document.querySelectorAll('.nav.nav-tabs.card-header-tabs'));
+
+	console.log("document.querySelector('.nav-link.active'): ", document.querySelector('.nav-link.active'));
+
 	
-	// document.querySelectorAll('.nav.nav-tabs.card-header-tabs')[0].querySelector('.nav-link.active').classList.remove('active');
-	// document.querySelectorAll('.nav.nav-tabs.card-header-tabs')[0].querySelectorAll('.nav-link')[1].classList.add('active');
+	document.querySelectorAll('.nav.nav-tabs.card-header-tabs')[0].querySelector('.nav-link.active').classList.remove('active');
+	
+	document.querySelectorAll('.nav.nav-tabs.card-header-tabs')[0].querySelectorAll('.nav-link')[1].classList.add('active');
 	
 	document.getElementById("Main_card_body").style.display = "block";
 	document.getElementById("Main_card_title").style.display = "block";
@@ -71,6 +75,12 @@ document.getElementById("Main").addEventListener("click", async () => {
 document.getElementById("About").addEventListener("click", async () => {
 
 	document.getElementById("Main").class = "nav-link";
+
+	// document.querySelectorAll('.nav.nav-tabs.card-header-tabs')[0].querySelector('.nav-link.active').classList.remove('active');
+	// OR
+	document.querySelectorAll('.nav.nav-tabs.card-header-tabs')[0].querySelectorAll('.nav-link')[1].classList.remove('active');
+	document.querySelectorAll('.nav.nav-tabs.card-header-tabs')[0].querySelectorAll('.nav-link')[2].classList.add('active');
+	
 	document.getElementById("Main_card_body").style.display = "none";
 	document.getElementById("Main_card_title").style.display = "none";
 	document.getElementById("Main_card_subtitle").style.display = "none";
