--- a/index6.html
+++ b/index6.html
@@ -47,11 +47,12 @@ ol#Main_card_text{ text-align: left; }
 // -----------------------------------------
   
 document.getElementById("Main").addEventListener("click", async () => {
-	
+
+	// View objects
 	// console.log("document.querySelectorAll('.nav.nav-tabs.card-header-tabs'): ", document.querySelectorAll('.nav.nav-tabs.card-header-tabs'));
 	// console.log("document.querySelector('.nav-link.active'): ", document.querySelector('.nav-link.active'));
 	
-	document.querySelectorAll('.nav.nav-tabs.card-header-tabs')[0].querySelector('.nav-link.active').classList.remove('active');
+	// document.querySelectorAll('.nav.nav-tabs.card-header-tabs')[0].querySelector('.nav-link.active').classList.remove('active');
 	// OR
 	document.querySelectorAll('.nav.nav-tabs.card-header-tabs')[0].querySelectorAll('.nav-link')[1].classList.remove('active');
 	
