--- a/index6.html
+++ b/index6.html
@@ -3,6 +3,10 @@
 <head></head>
 <body>
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
+
+<!-- --------------------------------------------------- -->
+
 <div class="tab_container">
 
 <div class="nav_tabs">
