--- a/index6.html
+++ b/index6.html
@@ -64,7 +64,7 @@ document.getElementById("Main").addEventListener("click", async () => {
 
 	console.log("document.querySelector('.tab_container'): ", document.querySelector('.tab_container'));
 
-	console.log("document.querySelectorAll('.tab_container.nav_tabs'): ", document.querySelectorAll('.tab_container.nav_tabs'));
+	// console.log("document.querySelectorAll('.tab_container.nav_tabs'): ", document.querySelectorAll('.tab_container.nav_tabs'));
 	
 	console.log("document.querySelector('.nav_tabs_link'): ", document.querySelector('.nav_tabs_link'));
 	
@@ -87,7 +87,7 @@ document.getElementById("About").addEventListener("click", async () => {
 	
 	console.log("document.querySelector('.tab_container'): ", document.querySelector('.tab_container'));
 
-	console.log("document.querySelectorAll('.tab_container.nav_tabs'): ", document.querySelectorAll('.tab_container.nav_tabs'));
+	// console.log("document.querySelectorAll('.tab_container.nav_tabs'): ", document.querySelectorAll('.tab_container.nav_tabs'));
 	
 	console.log("document.querySelector('.nav_tabs_link'): ", document.querySelector('.nav_tabs_link'));
 	
