--- a/index6.html
+++ b/index6.html
@@ -94,7 +94,7 @@ document.getElementById("About").addEventListener("click", async () => {
 	
 window.addEventListener('beforeunload', function() {
 	window.location.href = window.location.href + '?nocache=' + new Date().getTime();
-	document.getElementById("dropdown_options").selectedIndex = 0;
+	// document.getElementById("dropdown_options").selectedIndex = 0;
 });
 
 // -------------------------------------------------
