--- a/index6.html
+++ b/index6.html
@@ -39,14 +39,15 @@ div#About_container{ display:none; }
 h3#Main_subtitle{ text-align: left; }
 ol#Main_text{ text-align: left; }
 
-.tab_container{ max-width: 500px; }
+.tab_container{ max-width: 500px; background-color: white; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
 
 .nav_tabs{ display: flex; justify-content: space-around; background-color: white; }
 
 button#Main{ position: relative; font-size: 18px; font-weight: bold; height: 45px; padding: 10px 20px; background: #9ed0f0; overflow: hidden; border-radius: 10px; border: 2px solid; color: transparent; transition: all 0.6s ease; max-width: 450px; }
+
 button#About{ position: relative; font-size: 18px; font-weight: bold; height: 45px; padding: 10px 20px; background: #9ed0f0; overflow: hidden; border-radius: 10px; border: 2px solid; color: transparent; transition: all 0.6s ease; max-width: 450px; }
 
-.nav_tabs_link{ display: flex; }
+.nav_tabs_link{ background-color: transparent; border: none; outline: none; gap: 10px; display: flex; }
 
 </style>
 
