--- a/index6.html
+++ b/index6.html
@@ -34,23 +34,27 @@
 <!-- --------------------------------------------------- -->
 
 <style>
+*{ margin: 0; padding: 0; list-style: none; text-decoration: none; box-sizing: border-box; font-family: 'Montserrat', sans-serif; }
+
+body{ background: #e1ecf2; }
+	
 div#Main_container{ display:block; }
 div#About_container{ display:none; }
 h3#Main_subtitle{ text-align: left; }
 ol#Main_text{ text-align: left; }
 
-.tab_container{ max-width: 500px; background-color: transparent; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
+.tab_container{ max-width: 500px; background-color: transparent; border-radius: 10px;  }
 
-.nav_tabs{ display: flex; justify-content: space-around; background-color: white; }
+.nav_tabs{ display: flex; justify-content: space-around; background-color: transparent; }
 
-button#Main{ position: relative; font-size: 18px; font-weight: bold; height: 45px; padding: 10px 20px; background: transparent; overflow: hidden; border-radius: 10px; border: 2px solid; color: transparent; transition: all 0.6s ease; max-width: 450px; }
+button#Main{ position: relative; font-size: 18px; font-weight: bold; height: 45px; padding: 10px 20px; background: #586270; overflow: hidden; border-radius: 10px; border: 2px solid; color: #09264d; transition: all 0.6s ease; max-width: 450px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
 
-button#About{ position: relative; font-size: 18px; font-weight: bold; height: 45px; padding: 10px 20px; background: transparent; overflow: hidden; border-radius: 10px; border: 2px solid; color: transparent; transition: all 0.6s ease; max-width: 450px; }
+button#About{ position: relative; font-size: 18px; font-weight: bold; height: 45px; padding: 10px 20px; background: #586270; overflow: hidden; border-radius: 10px; border: 2px solid; color: #09264d; transition: all 0.6s ease; max-width: 450px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
 
 .nav_tabs_link{ background-color: transparent; border: none; outline: none; gap: 10px; display: flex; }
-.nav_tabs_link{ background-color: transparent; border: none; outline: none; gap: 10px; display: flex; }
+.nav_tabs_link:hover { background-color: transparent; }
 
-.nav_tabs_link.active { background-color: transparent; border: none; outline: none; gap: 10px; display: flex; }
+.nav_tabs_link.active { background-color: transparent; }
 
 </style>
 
