--- a/index6.html
+++ b/index6.html
@@ -34,7 +34,7 @@
 <!-- --------------------------------------------------- -->
 
 <style>
-*{ margin: 0; padding: 0; list-style: none; text-decoration: none; box-sizing: border-box; font-family: 'Montserrat', sans-serif; }
+*{ margin: 5px; padding: 0; list-style: none; text-decoration: none; box-sizing: border-box; font-family: 'Montserrat', sans-serif; }
 
 /*body{ background: #e1ecf2; }*/
 	
