--- a/index6.html
+++ b/index6.html
@@ -47,9 +47,9 @@ ol#Main_text{ text-align: left; }
 
 .nav_tabs{ display: flex; justify-content: space-around; background-color: transparent; }
 
-button#Main{ position: relative; font-size: 18px; font-weight: bold; height: 45px; padding: 10px 20px; background: #09264d; overflow: hidden; border-radius: 10px; border: 2px solid; color: #586270; transition: all 0.6s ease; max-width: 450px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
+button#Main{ position: relative; font-size: 18px; font-weight: bold; height: 45px; padding: 10px 20px; background: #09264d; overflow: hidden; border-radius: 10px; border: 2px solid; color: #586270; transition: all 0.6s ease; max-width: 450px; }
 
-button#About{ position: relative; font-size: 18px; font-weight: bold; height: 45px; padding: 10px 20px; background: #09264d; overflow: hidden; border-radius: 10px; border: 2px solid; color: #586270; transition: all 0.6s ease; max-width: 450px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
+button#About{ position: relative; font-size: 18px; font-weight: bold; height: 45px; padding: 10px 20px; background: #09264d; overflow: hidden; border-radius: 10px; border: 2px solid; color: #586270; transition: all 0.6s ease; max-width: 450px; }
 
 .nav_tabs_link{ background-color: transparent; border: none; outline: none; gap: 3px; display: flex; }
 .nav_tabs_link:hover { background-color: transparent; }
