--- a/index7.html
+++ b/index7.html
@@ -16,16 +16,17 @@ canvas {border: 1px solid black; position: absolute; display: inline-block; z-in
 
 
 <!-- Way 0 -->
-<script src="https://cdn.jsdelivr.net/npm/@google-cloud/storage@7.14.0/build/cjs/src/index.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@google-cloud/storage@7.14.0/build/cjs/src/index.min.js">var exports = {"__esModule": true};</script>
 
 <!-- Way 1 -->
 <script type="module" crossorigin="*" redirect="follow" mode="cors">
 import { Storage } from "https://cdn.jsdelivr.net/npm/@google-cloud/storage@7.14.0/build/cjs/src/index.min.js";
 module1.Storage = Storage;
+var exports = {"__esModule": true};
 </script>
   
 <script>
-var exports = {"__esModule": true};
+	
 // --------------------------------------
   
 async function try_to_use_nodejs_library_way0() {
