--- a/index8.html
+++ b/index8.html
@@ -8,19 +8,19 @@
 
   <!-- tabs -->
   <nav>
-    <a class="nav-link active" href="#" id="Main">Main</a>
-    <a class="nav-link" href="#" id="About">About</a>
+    <a class="tabs-nav-link active" href="#" id="tabs_Main">Main</a>
+    <a class="tabs-nav-link" href="#" id="tabs_About">About</a>
   </nav>
 
   <!-- content under each tab -->
-  <div class="content-container" id="content_Main">
-    <h1 class="content-title" id="content_Main_title">Main Title</h1>
-    <p class="content-text" id="content_Main_text">Main Text</p>
+  <div class="content-container" id="tabs_content_Main">
+    <h1 class="content-title" id="tabs_content_title_Main">Main Title</h1>
+    <p class="content-text" id="tabs_content_text_Main">Main Text</p>
   </div>
   
-  <div class="content-container" id="content_About">
-    <h1 class="content-title" id="content_About_title">About Title</h1>
-    <p class="content-text" id="content_About_text">About Text</p>
+  <div class="content-container" id="tabs_content_About">
+    <h1 class="content-title" id="tabs_content_title_About">About Title</h1>
+    <p class="content-text" id="tabs_content_text_About">About Text</p>
   </div>
   
 </div>
@@ -36,13 +36,7 @@ body { font-family: 'Lato', sans-serif; font-size: 14px; padding: 70px; backgrou
 
 nav
 
-.content-container { min-width: 600px; max-width: 600px; display: block;
-  margin-bottom: 1em;
-  background: #32557f;
-  padding: 2em 3em;
-  border-radius: .15em;
-  border: .2em solid #fff;
-  color: #fff; }
+.content-container { min-width: 600px; max-width: 600px; display: block; margin-bottom: 1em; background: #32557f; padding: 2em 3em; border-radius: .15em; border: .2em solid #fff; color: #fff; }
 
 nav { position: relative; z-index: 1;
   & > a {
@@ -54,9 +48,7 @@ nav { position: relative; z-index: 1;
     text-decoration: none;
     margin: 0 -.3em; }
 
-  & > a::before {
-    border: .2em solid #fff;
-  }
+  & > a::before { border: .2em solid #fff; }
 
   a::before {
     content: '';
@@ -70,9 +62,7 @@ nav { position: relative; z-index: 1;
   }
 }
 
-nav a.active {
-  z-index: 2;
-
+nav a.active { z-index: 2;
   &::before {
     background-color: #32557f;
     margin-bottom: -.08em;
@@ -111,10 +101,7 @@ nav a.active {
     margin-bottom: 0;
   }
 
-  nav a.active{
-    background: #fff;
-    color: #000;
-  }
+  nav a.active{ background: #fff; color: #000; }
 
   .content-container{
     position: absolute;
@@ -143,9 +130,7 @@ nav a.active {
     transform: none;
   }
 
-  nav > a::before {
-    border: none;
-  }
+  nav > a::before { border: none; }
 
   nav a.active { &::before {
       background-color: #fff;
@@ -158,9 +143,47 @@ nav a.active {
   
 <script>
 
-
- 
+// -----------------------------------------
   
+document.getElementById("tabs_Main").addEventListener("click", async () => {
+
+	// console.log("document.querySelector('.tabs'): ", document.querySelector('.tabs'));
+	console.log("document.querySelector('.tabs-nav-link'): ", document.querySelector('.tabs-nav-link'));
+	
+	document.getElementById("tabs_Main").classList.remove('active');
+	document.getElementById("tabs_About").classList.add('active');
+	
+	document.getElementById("tabs_content_Main").style.display = "block";
+
+	document.getElementById("tabs_content_About").style.display = "none";
+  
+});
+
+// -----------------------------------------
+  
+document.getElementById("About").addEventListener("click", async () => {
+	
+	// console.log("document.querySelector('.tabs'): ", document.querySelector('.tabs'));
+	console.log("document.querySelector('.tabs-nav-link'): ", document.querySelector('.tabs-nav-link'));
+  
+	document.getElementById("tabs_Main").classList.add('active');
+  document.getElementById("tabs_About").classList.remove('active');
+	
+	document.getElementById("tabs_content_Main").style.display = "none";
+
+	document.getElementById("tabs_content_About").style.display = "block";
+  
+});
+
+// -----------------------------------------
+	
+window.addEventListener('beforeunload', function() {
+	window.location.href = window.location.href + '?nocache=' + new Date().getTime();
+	// document.getElementById("dropdown_options").selectedIndex = 0;
+});
+
+// -------------------------------------------------
+ 
 </script>
 </body>
 </html>
