--- a/index8.html
+++ b/index8.html
@@ -161,7 +161,7 @@ document.getElementById("tabs_Main").addEventListener("click", async () => {
 
 // -----------------------------------------
   
-document.getElementById("About").addEventListener("click", async () => {
+document.getElementById("tabs_About").addEventListener("click", async () => {
 	
 	// console.log("document.querySelector('.tabs'): ", document.querySelector('.tabs'));
 	console.log("document.querySelector('.tabs-nav-link'): ", document.querySelector('.tabs-nav-link'));
