--- a/index8.html
+++ b/index8.html
@@ -30,13 +30,27 @@
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; }
 
+div#tabs_content_Main{ display: block; }
+div#tabs_content_About{ display: none; }
+	
 body { font-family: 'Lato', sans-serif; font-size: 14px; padding: 70px; background: #ebebeb; }
 
 .tabs { margin-bottom: 30px; }
 
-nav
+/* nav */
 
-.content-container { min-width: 600px; max-width: 600px; display: block; margin-bottom: 1em; background: #32557f; padding: 2em 3em; border-radius: .15em; border: .2em solid #fff; color: #fff; }
+/* color = text color, background = background-color = background color */
+.content-container { 
+	min-width: 600px; 
+	max-width: 600px; 
+	display: block; 
+	margin-bottom: 1em; 
+	background: #32557f; 
+	padding: 2em 3em; 
+	border-radius: .15em; 
+	border: .2em solid #fff; 
+	color: #fff;
+}
 
 nav { position: relative; z-index: 1;
   & > a {
@@ -58,7 +72,7 @@ nav { position: relative; z-index: 1;
     border-bottom: none;
     border-radius: .4em .4em 0 0;
     background: #7eb4e2;
-    transform: scale(1.2, 1.3) perspective(.5em) rotateX(5deg);
+    /* transform: scale(1.2, 1.3) perspective(.5em) rotateX(5deg); */
   }
 }
 
@@ -96,10 +110,7 @@ nav a.active { z-index: 2;
     margin-right: 1px;
   }
 
-  nav a::before {
-    background-color: none;
-    margin-bottom: 0;
-  }
+  nav a::before { background-color: none; margin-bottom: 0; }
 
   nav a.active{ background: #fff; color: #000; }
 
@@ -117,7 +128,7 @@ nav a.active { z-index: 2;
     padding: 30px;
   }
 
-// To delete previous styles:
+/* To delete previous styles: */
 
   a::before {
     content: '';
@@ -138,6 +149,7 @@ nav a.active { z-index: 2;
       border-radius: 30px;
     }
   }
+	
 }
 </style>
   
